src/style.css
/* ... */
.category-icon-wrapper {
  padding: 1rem 0;
  color: var(--color-category-text);
}

.modal-icon-wrapper,
.category-icon-wrapper {
  margin: 0.5rem 0.5rem;
}

.modal-icon-wrapper {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
}

.plus-wrap,
.view-all-icons,
.gear-icon-wrapper,
.category-icon-wrapper,
.modal-icon-wrapper {
  border-radius: 1rem;
  min-width: 130px;
  background-color: transparent;
  opacity: 95%;
}
.plus-wrap,
.view-all-icons,
.gear-icon-wrapper,
.category-icon-wrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.track-icons {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

/*to give a glass effect on icons*/
.save-btn,
.view-all,
.gear-icon,
.category-icon-wrapper,
.modal-icon-wrapper {
  border: 1px solid var(--color-glass-border);
}

.slide-left-btn {
  display: none;
}

.slide-right-btn {
  display: none;
}

/*for other web compatibility*/
.track-icons::-webkit-scrollbar {
  width: 0;
  height: 0;
}

/*paddings for better user experience*/
.category-details,
.util-btn-wrapper,
.category-icon-container {
  margin: 0 1.5rem;
}

/*category details section*/
.category-detail-wrapper {
  padding: 1rem 0;
}

.category-title {
  padding: 0.5rem 1rem;
  background-color: var(--color-category-h1-bg);
  color: var(--color-category-h1-text);
}

/*to give a glass effect on category container and progress bar*/
.category-title,
.category-icon-container,
.progress-bar {
  border-radius: 0.2rem;
  border-bottom: 1px solid var(--color-glass-border);
  border-right: 1px solid var(--color-glass-border);
  box-shadow: 0 2px 5px 0 var(--color-shadow-box);
}

.expense-wrapper {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 2rem 0;
}

.expense-details {
  display: flex;
  flex-direction: column;
  align-items: start;
  width: 100%;
  gap: 0.5rem;
}

.item-name {
  font-weight: bold;
}

.date-goal-wrap {
  display: flex;
  flex-direction: column;
  align-items: start;
  padding: 0 1rem 0 0;
  width: 100%;
}

.progress {
  width: 100%;
  background-color: var(--color-progress-bar-bg);
}

.progress-bar {
  display: flex;
  justify-content: end;
  padding: 0.5rem 0.5rem;
  width: var(--target-width, 0%);
  min-width: 3rem;
  background-color: var(--color-progress-bar);
  color: var(--color-progress-bar-text);
  transition: width 0.5s ease;
  animation: grow 0.6s ease forwards;
}

.edit-budget-btn {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 100%;
  font-family: "Inter", sans-serif;
  padding: 0.5rem 0 0.5rem 0.5rem;
  font-size: 1rem;
  border: none;
  background-color: transparent;
}

.util-btn-wrapper {
  margin-top: 1rem;
  display: flex;
  justify-content: space-between;
}

.util-btns {
  padding: 0.5rem 1rem;
  border-radius: 0.5rem;
  border: none;
  background-color: var(--color-utils-btn-bg);
  color: var(--color-utils-btn-text);
  font-size: 1rem;
}

/*edit category modal section*/
.category-dialog-wrapper {
  margin: auto;
  z-index: 2000;
  max-width: 80%;
  min-width: 80%;
  border: none;
  border-radius: 10px;
  overflow-x: hidden;
}

.category-dialog {
  background-color: var(--color-category-modal);
  width: 100%;
  display: flex;
  flex-direction: column;
}

dialog::backdrop {
  background-color: var(--color-modal-backdrop);
  opacity: 50%;
}

.plus-icon {
  margin-top: 1rem;
}
.save-btn {
  font-size: 1.5rem;
  font-family: "Inter", sans-serif;
  background-color: var(--color-save-btn-bg);
  border: none;
  color: var(--color-save-btn-text);
  padding: 1rem 0;
}
.remove-btn {
  grid-column: -1;
  font-size: 1rem;
  border-radius: 50%;
  box-shadow: 0 2px 5px 0 var(--color-shadow-box);
  color: var(--color-remove-icon);
}

.close-btn {
  position: absolute;
  right: 0;
  padding: 1rem;
  background-color: transparent;
  color: var(--color-x-icon);
}

.category-modal-icons {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  margin: 1rem 0.5rem 2rem;
}

.modal-icon-wrapper {
  padding: 0 0 1rem 0;
  background-color: var(--color-category-icon-modal-bg);
  box-shadow: 0 2px 5px 0 var(--color-shadow-box);
}

.confirmation-dialog-wrapper {
  margin: auto;
  z-index: 3000;
  border-radius: 10px;
  border: none;
  overflow-x: hidden;
}

.confirmation-dialog {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  gap: 0.5rem;
  padding: 1.5rem;
}

.add-category-dialog,
.edit-budget-dialog-wrapper,
.add-category-wrapper {
  margin: auto;
  z-index: 3000;
  border-radius: 10px;
  border: none;
  overflow-x: hidden;
}

.edit-budget-dialog,
.add-category-dialog {
  display: flex;
  flex-direction: column;
  align-items: start;
  width: 100%;
  gap: 1rem;
  padding: 1.5rem;
}

.deleteCatIconBtn,
.cancelCatIconBtn {
  width: 100%;
  height: 2.5rem;
  border: none;
  color: var(--color-cancel-btn-text);
  border-radius: 0.5rem;
  font-size: 1rem;
}

.deleteCatIconBtn {
  margin-top: 1rem;
  background-color: var(--color-delete-btn-bg);
}

.cancelCatIconBtn {
  background-color: var(--color-cancel-btn-bg);
}

.edit-budget-category,
.edit-budget-date {
  background-color: var(--color-input-bg);
}

.save,
.cancel,
.edit-budget-category-detail,
.edit-budget-category {
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
  font-size: 1rem;
}

.edit-budget-category,
.save,
.cancel,
.edit-budget-category-detail {
  height: 3rem;
}

.save,
.cancel,
.edit-budget-category-detail,
.edit-budget-category,
.edit-budget-title {
  width: 100%;
}

.edit-budget-amount {
  width: 100%;
  text-align: center;
}

.dollar {
  gap: 0.5rem;
  display: flex;
  align-items: center;
}

.edit-budget-title {
  font-size: 1.5rem;
  text-align: center;
}

.edit-budget-date-wrapper {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 1rem;
  width: 100%;
}
/* ... */

